--- a/templates/subscriptions/subscribe_list.html
+++ b/templates/subscriptions/subscribe_list.html
@@ -51,7 +51,7 @@
                     <input type="hidden" name="plan_name" value="{{ detail.plan.plan_name }}">
                     <input type="hidden" name="redirect_from" value="subscribe_list">
                     <button type="submit"
-                            class="btn btn-outline-success card-signup-button">
+                            class="btn btn-outline-primary card-signup-button">
                         {% if user.is_authenticated %}
                             Subscribe
                         {% else %}
