--- a/templates/base.html
+++ b/templates/base.html
@@ -3,12 +3,12 @@
 <!DOCTYPE html>
 <html  lang="en">
     <head>
-        <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap/bootstrap.min.css' %}">
+{#        <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap/bootstrap.min.css' %}">#}
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static '/fontawesome-free-5.15.1-web/css/all.css' %}">
+{#        <link rel="stylesheet" type="text/css" href="{% static '/fontawesome-free-5.15.1-web/css/all.css' %}">#}
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-{#        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.css">#}
-{#        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">#}
 
         <link rel="shortcut icon" href="{% static '/image/cloud.png' %}" type="image/x-icon">
         <title>{% block title %}CloudStorage{% endblock %}</title>
