--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,8 @@
 {% block col-12 %}
     <div class="home-container">
         <div class="home-info">
-            <h1 class="home-title noselect">Reliable and secure storage</h1>
-            <p class="home-text noselect text-secondary">Store your files by subscription plan with easy of use.
+            <h1 class="home-title">Reliable and secure storage</h1>
+            <p class="home-text text-secondary">Store your files by subscription plan with easy of use.
                 Subscribe and get started with Cloud Storage</p>
             <a class="btn btn-primary home-button"
                    href={% url 'dfs_subscribe_list' %}><span class="home-button-text">Get Started</span></a>
