--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -22,9 +22,6 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'dfs_subscribe_list' %}">Plans</a>
                 </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
             {% else %}
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'overview' %}">Overview</a>
@@ -33,17 +30,6 @@
                     <a class="nav-link" href="{% url 'stats' %}">Stats</a>
                 </li>
             {% endif %}
-            {#            <li class="nav-item dropdown header__dropdown">#}
-            {#                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">#}
-            {#                    Dropdown#}
-            {#                </a>#}
-            {#                <div class="dropdown-menu" aria-labelledby="navbarDropdown">#}
-            {#                    <a class="dropdown-item" href="#">Action</a>#}
-            {#                    <a class="dropdown-item" href="#">Another action</a>#}
-            {#                    <div class="dropdown-divider"></div>#}
-            {#                    <a class="dropdown-item" href="#">Something else here</a>#}
-            {#                </div>#}
-            {#            </li>#}
         </ul>
 
         <div class="header-buttons">
@@ -64,9 +50,13 @@
         </div>
     </div>
 </nav>
+{##}
+{#<script src="{% static 'js/jquery/jquery-3.5.1.min.js' %}"></script>#}
+{#<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"#}
+{#        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"#}
+{#        crossorigin="anonymous"></script>#}
+{#<script src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>#}
 
-<script src="{% static 'js/jquery/jquery-3.5.1.min.js' %}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-        integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-<script src="{% static 'js/bootstrap/bootstrap.min.js' %}"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
