--- a/templates/subscriptions/subscribe_list.html
+++ b/templates/subscriptions/subscribe_list.html
@@ -10,7 +10,7 @@
         {% if user.is_authenticated %}
             <h1 class="display-4 subscribe-list__title">Subscription Plans</h1>
         {% else %}
-            <h1 class="display-4 subscribe-list__title">Sign Up & Subscribe</h1>
+            <h1 class="display-4 subscribe-list__title">Sign Up and Subscribe</h1>
         {% endif %}
 
         <div class="plans">
