--- a/templates/profile/change-password.html
+++ b/templates/profile/change-password.html
@@ -4,7 +4,7 @@
 
 {% block main %}
 <form class="password-form" method="post">
-    <div class="col-7 password-block">
+    <div class="col-7 password-block form-card">
         <div class="password-header">
             <h2 class="password-title">Change password</h2>
             <a href="{% url 'profile' %}">Back to profile</a>
