--- a/templates/storage/overview.html
+++ b/templates/storage/overview.html
@@ -6,7 +6,7 @@
 {% load storage_tags %}
 
 {% block javascript %}
-    <script src="{% static 'fontawesome-free-5.15.1-web/js/all.js' %}"></script>
+{#    <script src="{% static 'fontawesome-free-5.15.1-web/js/all.js' %}"></script>#}
 
     <script src="{% static 'js/jquery/jquery-file-upload/vendor/jquery.ui.widget.js' %}"></script>
     <script src="{% static 'js/jquery/jquery-file-upload/jquery.iframe-transport.js' %}"></script>
