--- a/templates/snippets/base.html
+++ b/templates/snippets/base.html
@@ -3,14 +3,16 @@
 <!DOCTYPE html>
 <html  lang="en">
     <head>
-{#        <link rel="stylesheet" type="text/css" href="{% static '/css/bootstrap/bootstrap.min.css' %}">#}
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="{% static '/css/style.css' %}">
-{#        <link rel="stylesheet" type="text/css" href="{% static '/fontawesome-free-5.15.1-web/css/all.css' %}">#}
         <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
 
-
         <link rel="shortcut icon" href="{% static '/image/cloud.png' %}" type="image/x-icon">
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
         <title>{% block title %}CloudStorage{% endblock %}</title>
     </head>
     <body class="base-body">
