Change subscription preview card layout

--- a/templates/subscriptions/subscribe_confirmation.html
+++ b/templates/subscriptions/subscribe_confirmation.html
@@ -7,7 +7,7 @@
 {% block title %}Subscribe | Confirmation{% endblock %}
 
 {% block content %}
-  <main class="subscribe-container">
+  <main class="subscribe-container form-card">
     <h1 class="display-4">Confirmation</h1>
 
     <p class="confirmation-text">
