--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,6 +17,7 @@ body {
     background-color: #ffffff;
     box-shadow: 0 1px 0 0 rgba(194, 194, 194, 0.24)
 }
+
 @media (max-width: 1070px) {
     .header {
         padding-left: 70px;
@@ -43,14 +44,16 @@ body {
 }
 
 
-@media(max-width: 767px) {
+@media (max-width: 767px) {
     .navbar-display {
         display: flex;
     }
+
     .header-buttons {
         display: flex;
         flex-direction: column;
     }
+
     .header-button {
         padding: .5rem 1rem;
     }
@@ -143,7 +146,7 @@ body {
     padding: 30px;
 }
 
-@media(max-width: 340px) {
+@media (max-width: 340px) {
     #dfs-container .subscribe-container .plan {
         min-width: unset;
     }
@@ -520,11 +523,12 @@ body {
     margin: 0 30px;
 }
 
-@media(max-width: 991px) {
+@media (max-width: 991px) {
     .profile-form__info {
         margin: 0;
         max-width: 320px;
     }
+
     .profile-form__image {
         margin: 0;
     }
@@ -738,12 +742,14 @@ body {
     margin-top: 40px;
     margin-bottom: 40px;
 }
+
 .stats-footer {
     margin-top: 40px;
     display: flex;
     flex-flow: row wrap;
     justify-content: space-between;
 }
+
 .open-storage-link {
     font-size: 20px;
 }
@@ -757,7 +763,7 @@ body {
     font-weight: 500;
 }
 
-@media(max-width: 767px) {
+@media (max-width: 767px) {
     .open-storage-link {
         margin-top: 20px;
     }
@@ -775,9 +781,11 @@ body {
     width: 100%;
     table-layout: fixed;
 }
+
 .table-body {
     word-wrap: break-word;
 }
+
 .select-col {
     width: 30px;
 }
@@ -817,7 +825,7 @@ body {
     }
 }
 
-@media(max-width: 767px) {
+@media (max-width: 767px) {
     .hidden-column {
         display: none;
     }
@@ -827,13 +835,14 @@ body {
     margin-left: 15px;
 }
 
-@media(max-width: 404px) {
+@media (max-width: 404px) {
     .actions-column {
         display: flex;
         flex-direction: column;
         width: 100%;
         text-align: center;
     }
+
     .download-single {
         margin-top: 5px;
         margin-left: 0;
@@ -844,18 +853,21 @@ body {
     .overview-table {
         font-size: 14px;
     }
+
     .storage-size-info {
         font-size: 12px;
     }
+
     .search-bar-icon, .chevron-icon {
         margin-left: 5px;
     }
+
     .overview-title {
         font-size: 28px;
     }
 }
 
-@media(max-width: 496px) {
+@media (max-width: 496px) {
     .subscribe-list__title {
         font-size: 46px;
     }
@@ -901,7 +913,7 @@ body {
     font-size: 20px;
 }
 
-@media(max-width: 994px) {
+@media (max-width: 994px) {
     .home-container {
         flex-direction: column;
     }
@@ -918,12 +930,133 @@ body {
     }
 }
 
-@media(max-width: 550px) {
-        .home-image {
+@media (max-width: 550px) {
+    .home-image {
         width: 300px;
     }
 }
 
 .form-card {
     padding: 30px;
+}
+
+.loader {
+    display: none;
+    width: 120px;
+    height: 120px;
+    transform: rotate(-90deg);
+    stroke-linecap: round;
+    stroke-width: 4;
+    fill: none;
+}
+
+.loader .internal-circle,
+.loader .external-circle {
+    stroke: #fff;
+    stroke-dashoffset: 0;
+    transform-origin: center;
+}
+
+.loader .internal-circle {
+    stroke-dasharray: 187;
+    -webkit-animation: internal 1s ease-in-out infinite;
+    animation: internal 1s ease-in-out infinite;
+    opacity: 0.4;
+}
+
+.loader .external-circle {
+    stroke-dasharray: 312;
+    -webkit-animation: external 1s linear infinite;
+    animation: external 1s linear infinite;
+    opacity: 0.9;
+}
+
+@-webkit-keyframes internal {
+    0% {
+        stroke-dashoffset: 187;
+    }
+    25% {
+        stroke-dashoffset: 80;
+    }
+    100% {
+        stroke-dashoffset: 187;
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes internal {
+    0% {
+        stroke-dashoffset: 187;
+    }
+    25% {
+        stroke-dashoffset: 80;
+    }
+    100% {
+        stroke-dashoffset: 187;
+        transform: rotate(360deg);
+    }
+}
+
+@-webkit-keyframes external {
+    0% {
+        stroke-dashoffset: 312;
+        transform: rotate(70deg);
+    }
+    60% {
+        stroke-dashoffset: -312;
+    }
+    100% {
+        stroke-dashoffset: -312;
+        transform: rotate(450deg);
+    }
+}
+
+@keyframes external {
+    0% {
+        stroke-dashoffset: 312;
+        transform: rotate(70deg);
+    }
+    60% {
+        stroke-dashoffset: -312;
+    }
+    100% {
+        stroke-dashoffset: -312;
+        transform: rotate(450deg);
+    }
+}
+
+@-webkit-keyframes bgcolors {
+    0% {
+        background: #1a87c5;
+    }
+    25% {
+        background: #c51a3a;
+    }
+    50% {
+        background: #e6d121;
+    }
+    75% {
+        background: #22cf76;
+    }
+    100% {
+        background: #1a87c5;
+    }
+}
+
+@keyframes bgcolors {
+    0% {
+        background: #1a87c5;
+    }
+    25% {
+        background: #c51a3a;
+    }
+    50% {
+        background: #e6d121;
+    }
+    75% {
+        background: #22cf76;
+    }
+    100% {
+        background: #1a87c5;
+    }
 }
